--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ header img{
     margin-left: 8px;
 }
 header h1 {
+    margin-left: 30%;
     font-size: 60px;
 }
 /*----------------------------------------------------*/
